packages/isar_generator/test/errors/id/duplicate.dart
// two or more properties with type "Id" defined

import 'package:isar/isar.dart';

@Collection()
class Test {
  Id? id1;

  Id? id2;
}
